<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_SaMController" Id="{4563e61a-16f1-0b7e-1e7a-1e3cce62ebf6}" SpecialFunc="None">
    <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		30.10.2025		TC 4024.66
	Główny FB do zarządzania stanami i trybami pracy
*)
FUNCTION_BLOCK FB_SaMController EXTENDS FB_BaseControlElement IMPLEMENTS ITF_SaMController, ITF_SaMControllerConfigure
VAR
	stCmdStates					: ST_CommandChangeState;
	stCmdModes					: ST_CommandChangeMode;
	arrcmdStates				: ARRAY [1..GVL_SaMConstans.NUMBER_OF_COMMAND_CHANGE_STATES] OF ITF_CommandChange;
	arrcmdModes					: ARRAY [1..GVL_SaMConstans.NUMBER_OF_COMMAND_CHANGE_MODES] OF ITF_CommandChange;
	stStates					: ST_SaMElementStates;
	stModes						: ST_SaMElementModes;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="Initialization" Id="{36e42ff2-7480-0d56-1afc-450089a48df2}" />
    <Folder Name="ITF_SaMController" Id="{c8bddf21-ded7-0091-2800-8c3c9b4e262e}" />
    <Method Name="Execute" Id="{608fbfab-efd0-0a43-132b-9ced413e3cf8}" FolderPath="ITF_SaMController\">
      <Declaration><![CDATA[(*			
	EVERDE sp. z o.o.
	Rafał Osajda		03.11.2025		TC 4024.66
	Obsługa zmiany stanów i trybów 
*)
METHOD Execute : BOOL
VAR_INPUT
	iNumberOfCommand		: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[]]></ST>
      </Implementation>
    </Method>
    <Method Name="FB_init" Id="{8f55a5c3-a0eb-0deb-011c-23bf5df2ad6a}" FolderPath="Initialization\">
      <Declaration><![CDATA[METHOD FB_init : BOOL
VAR_INPUT
	bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
	bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.SetText (eLocation := E_BaseLocation.pl, wsDescription := "SaM Controller");
THIS^.SetText (eLocation := E_BaseLocation.en, wsDescription := "SaM Controller");
THIS^.SetText (eLocation := E_BaseLocation.de, wsDescription := "SaM Controller");
THIS^.SetName (stName := THIS^.GetTexts ());

Initialization_AddStates ();
Initialization_AddModes ();

Initialization_AddCommandChangeState ();
Initialization_AddCommandChangeModes ();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialization_AddCommandChangeModes" Id="{1109a5fd-0b62-0ed8-0a3b-0f57bddc8c59}" FolderPath="Initialization\">
      <Declaration><![CDATA[METHOD PRIVATE Initialization_AddCommandChangeModes : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.arrcmdModes [E_SaMCommandChangeMode.Production]	:= THIS^.stCmdModes.cmdChangeProduction;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdModes.cmdChangeProduction);

THIS^.arrcmdModes [E_SaMCommandChangeMode.Maintenance]	:= THIS^.stCmdModes.cmdChangeMaintenance;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdModes.cmdChangeMaintenance);

THIS^.arrcmdModes [E_SaMCommandChangeMode.Manual]		:= THIS^.stCmdModes.cmdChangeManual;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdModes.cmdChangeManual);

THIS^.arrcmdModes [E_SaMCommandChangeMode.Washing]		:= THIS^.stCmdModes.cmdChangeWashing;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdModes.cmdChangeWashing);

THIS^.arrcmdModes [E_SaMCommandChangeMode.Diagnostisc]	:= THIS^.stCmdModes.cmdChangeDiagnostics;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdModes.cmdChangeDiagnostics);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialization_AddCommandChangeState" Id="{7530a13b-678f-0aa6-14bb-d0e2275487dd}" FolderPath="Initialization\">
      <Declaration><![CDATA[METHOD PRIVATE Initialization_AddCommandChangeState : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.arrcmdStates [E_SaMCommandChangeState.Abort]	:= THIS^.stCmdStates.cmdChangeAbort;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeAbort);

THIS^.arrcmdStates [E_SaMCommandChangeState.Clear]	:= THIS^.stCmdStates.cmdChangeClear;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeClear);

THIS^.arrcmdStates [E_SaMCommandChangeState.Reset]	:= THIS^.stCmdStates.cmdChangeReset;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeReset);

THIS^.arrcmdStates [E_SaMCommandChangeState.Start]	:= THIS^.stCmdStates.cmdChangeStart;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeStart);

THIS^.arrcmdStates [E_SaMCommandChangeState.Stop]	:= THIS^.stCmdStates.cmdChangeStop;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeStop);

THIS^.arrcmdStates [E_SaMCommandChangeState.Hold]	:= THIS^.stCmdStates.cmdChangeHold;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeHold);

THIS^.arrcmdStates [E_SaMCommandChangeState.Unhold]	:= THIS^.stCmdStates.cmdChangeUnhold;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeUnhold);

THIS^.arrcmdStates [E_SaMCommandChangeState.Suspend]:= THIS^.stCmdStates.cmdChangeSuspend;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeSuspend);

THIS^.arrcmdStates [E_SaMCommandChangeState.Unsuspend]	:= THIS^.stCmdStates.cmdChangeUnSuspend;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeUnSuspend);

THIS^.arrcmdStates [E_SaMCommandChangeState.Complete]	:= THIS^.stCmdStates.cmdChangeComplete;
THIS^.AddComponent (itfComponent 	:= THIS^.stCmdStates.cmdChangeComplete);
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialization_AddModes" Id="{2b512a92-51af-0b34-2a0b-9e312b0ddf05}" FolderPath="Initialization\">
      <Declaration><![CDATA[METHOD PRIVATE Initialization_AddModes : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AddComponent (itfComponent	:= THIS^.stModes.fbProduction);
THIS^.AddComponent (itfComponent	:= THIS^.stModes.fbMaintenance);
THIS^.AddComponent (itfComponent	:= THIS^.stModes.fbManual);
THIS^.AddComponent (itfComponent	:= THIS^.stModes.fbWashing);
THIS^.AddComponent (itfComponent	:= THIS^.stModes.fbDiagnostics);



]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialization_AddStates" Id="{c7a2785d-ca07-0767-289b-70b582ac2ba0}" FolderPath="Initialization\">
      <Declaration><![CDATA[METHOD PRIVATE Initialization_AddStates : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbUndefined);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbAborting);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbAborted);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbClearing);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbStopping);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbStopped);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbResetting);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbIdle);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbStarting);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbExecute);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbSuspending);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbSuspended);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbUnsuspending);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbHolding);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbHeld);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbUnholding);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbCompleting);
THIS^.AddComponent (itfComponent 	:= THIS^.stStates.fbComplete);
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>